Hide root connections by default

--- a/oidentd.conf
+++ b/oidentd.conf
@@ -19,13 +19,9 @@ default {
 	}
 }
 
-# It is recommended that you hide any connections owned by
-# the superuser.  Uncomment the following lines to do this.
-
-#user root {
-#	default {
-#		# Uncomment only one of the following two lines.
-#		force hide            # Either report an error ...
-#		force reply "nobody"  # ... or spoof ident responses
-#	}
-#}
+user root {
+	default {
+		# Hide connections belonging to the superuser.
+		force hide
+	}
+}
