--- a/oidentd_masq.conf
+++ b/oidentd_masq.conf
@@ -1,7 +1,7 @@
 # This is the NAT configuration file for oidentd.
 # If you enable NAT support with the '-m' option,
 # this file is read to determine the appropriate
-# ident responses to queries intended for hosts
+# Ident responses to queries intended for hosts
 # masquerading through this server.
 #
 # See oidentd_masq.conf(5) for more information.
