--- a/contrib/systemd/oidentd@.service
+++ b/contrib/systemd/oidentd@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=RFC 1413 compliant per-connection ident server
+Description=RFC 1413 compliant per-connection Ident server
 Documentation=man:oidentd(8) man:oidentd.conf(5) man:oidentd_masq.conf(5)
 
 [Service]
