--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
-AC_INIT([oidentd],[3.0.0],[info@janikrabe.com],[],[https://janikrabe.com/projects/oidentd/])
+AC_INIT([oidentd],[3.0.0],[info@janikrabe.com],[],[https://oidentd.janikrabe.com])
 AM_INIT_AUTOMAKE([dist-bzip2 dist-xz dist-zip dist-zstd])
 
 AC_DEFINE(PACKAGE_AUTHOR, ["Janik Rabe"], [maintainer])
