contrib: remove `-S` (`--nosyslog`) from systemd unit files
`oidentd.service` is `Type=forking`, and oidentd disconnects from the
parent's stdout/stderr after forking (as it should). That means that,
with `-S`, all logs are sent to `/dev/null`.

This commit also updates `oidentd@.service`, though that is just for
consistency (since it doesn't fork).

--- a/contrib/systemd/oidentd.service
+++ b/contrib/systemd/oidentd.service
@@ -4,7 +4,7 @@ Documentation=man:oidentd(8) man:oidentd.conf(5) man:oidentd_masq.conf(5)
 After=network.target
 
 [Service]
-ExecStart=/usr/sbin/oidentd -S
+ExecStart=/usr/sbin/oidentd
 ExecReload=/bin/kill -HUP $MAINPID
 PrivateDevices=true
 Restart=on-failure
