--- a/contrib/systemd/oidentd@.service
+++ b/contrib/systemd/oidentd@.service
@@ -3,7 +3,7 @@ Description=RFC 1413 compliant per-connection Ident server
 Documentation=man:oidentd(8) man:oidentd.conf(5) man:oidentd_masq.conf(5)
 
 [Service]
-ExecStart=/usr/sbin/oidentd -IS
+ExecStart=/usr/sbin/oidentd -I
 PrivateDevices=true
 StandardInput=socket
 StandardError=syslog
